kubedefs/appdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vproapp
  labels:
    app: vproapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vproapp
  template:
    metadata:
      labels:
        app: vproapp
    spec:
      containers:
      - name: vproapp
        image: vprocontainers/vprofileapp
        ports:
        - name: vproapp-port
        - containerPort: 8080
      initcontainers:
        - name:   init-mydb
          image: busybox
          args: ["sh", "-c", "until nslookup vprodb.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for vprodb; sleep 2; done"]  
        - name: init-memcache 
          image: busybox
          args: ["sh", "-c", "until nslookup vprocache01$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for vpromc; sleep 2; done"]
        - name: init-rabbitmq
          image: busybox 
          args: ["sh", "-c", "until nslookup vpromq01.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for vprormq; sleep 2; done"]
