kubedefs/dbdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vprodb
  labels:
    app: vprodb
spec:
  replicas: 1 # Desired number of identical pods
  selector:
    matchLabels:
      app: vprodb
  template:
    metadata:
      labels:
        app: vprodb
    spec:
      containers:
      - name: vprodb
        image: vprocontainers/vprofiledb 
        volumeMounts:
        - mountpath: /var/lib/mysql 
          name: vpro-db-data # Container image to use
        ports:
        - name : vprodb-port
          containerPort : 3306 
      volumes: 
      - name: vpro-db-data
        PersistentVolumeClaim:
          claimName: db-pv-claim 
      initcontainers:
        - name:   busybox
          image: busybox:latest
          args: ["rm", "-rf", "/var/lib/mysql/lost+found"]
          volumeMounts:
            -name: vpro-db-data
            mountpath: /var/lib/mysql # Port the container listens on
