kubedefs/mcservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vprocache01
spec:
  
  ports:
    - protocol: TCP
      port: 11211
      targetPort: vpromc-port
  selector:
    app: vpromc   
  type: ClusterIP
